--- a/index.html
+++ b/index.html
@@ -150,76 +150,92 @@
                             <div class="col-lg-4 margensuperior">
                                 <input type="text" class="form-control" 
                                     id="uuid" 
+                                    v-model="log.uuid"
                                     oninput="this.value = this.value.replace(/[^0-9]/g, '').replace(/(\..*)\./g, '$1');"
                                     placeholder="Ej: Digite el uuid de la consulta">
                             </div>  
                             <div class="col-lg-4 margensuperior">
-                                <button id="btnBuscarUuid" class="btn btn-primary">Buscar</button>                                
+                                <button id="btnBuscarUuid" class="btn btn-primary" @click="buscarLog">
+                                    Buscar
+                                </button>                                
                             </div>                                
                         </div>   
     
-                        <div id="resultadosLog" class="row margensuperior hidden">
+                        <div id="resultadosLog" class="row margensuperior" v-show="busquedaslog">
                             <div  class="col-lg-12">
                                 <h4 class="text-success">
                                     Resultados Historicos
                                 </h4>
                             </div>
-                            <div  class="col-lg-6 busqueda_log_error">
+                            <div  class="col-lg-6" v-show="logError">
                                 <h5 class="text-danger">
                                     La consulta realizada no arrojó resultados
                                 </h5>
                             </div>
-                            <div  class="col-lg-6 busqueda_log_exitoso">
+                            <div  class="col-lg-6" v-show="logExitoso">
                                 <h5>
                                     Uuid: &nbsp;
-                                    <span id="log_uuid" style="cursor:pointer;" 
-                                        class="text-primary h4"></span>
+                                    <span id="log_uuid" style="cursor:pointer;"                                         
+                                        class="text-primary h4">
+                                        {{respuestalog.uuid}}
+                                    </span>
                                 </h5>
                             </div>
-                            <div  class="col-lg-6 busqueda_log_exitoso">
+                            <div  class="col-lg-6" v-show="logExitoso">
                                 <h5>
                                     Nombre Buscado: &nbsp;
                                     <span id="log_nombre_buscado" style="cursor:pointer;" 
-                                        class="text-primary h4"></span>
+                                        class="text-primary h4">
+                                        {{ respuestalog.nombre_buscado }}
+                                    </span>
                                 </h5>
                             </div>
-                            <div  class="col-lg-6 busqueda_log_exitoso">
+                            <div  class="col-lg-6" v-show="logExitoso">
                                 <h5>
                                     Porcentaje Buscado: &nbsp;
                                     <span id="log_porcentaje_buscado" style="cursor:pointer;" 
-                                        class="text-primary h4"></span>
+                                        class="text-primary h4">
+                                        {{ respuestalog.porcentaje_buscado }}
+                                    </span>
                                 </h5>
                             </div>
-                            <div  class="col-lg-6 busqueda_log_exitoso">
+                            <div  class="col-lg-6" v-show="logExitoso">
                                 <h5>
                                     Registros Encontrados: &nbsp;
                                     <span id="log_registros_encontrados" style="cursor:pointer;" 
-                                        class="text-primary h4"></span>
+                                        class="text-primary h4">
+                                        {{ respuestalog.registros_encontrados }}
+                                    </span>
                                 </h5>
                             </div>
-                            <div  class="col-lg-6 busqueda_log_exitoso">
+                            <div  class="col-lg-6" v-show="logExitoso">
                                 <h5>
                                     Estado ejecuci&oacute;n: &nbsp;
                                     <span id="log_estado_ejecucion" style="cursor:pointer;" 
-                                        class="text-primary h4"></span>
+                                        class="text-primary h4">
+                                        {{ respuestalog.estado_ejecucion }}
+                                    </span>
                                 </h5>
                             </div>
-                            <div  class="col-lg-6 busqueda_log_exitoso">
+                            <div  class="col-lg-6" v-show="logExitoso">
                                 <h5>
                                     Fecha de Creaci&oacute;n: &nbsp;
                                     <span id="log_created_at" style="cursor:pointer;" 
-                                        class="text-primary h4"></span>
+                                        class="text-primary h4">
+                                        {{ respuestalog.created_at }}
+                                    </span>
                                 </h5>
                             </div>
                             <div  class="col-lg-12">
                                 <h4 class="text-success">
                                     Detalles relacionados con el Uuid Buscado
                                 </h4>
-                                <button id="btnExportarLog" class="btn btn-info hidden">
+                                <button id="btnExportarLog" class="btn btn-info" 
+                                    v-show="busquedaslog" @click="confirmarExportar(1)">
                                     Exportar
                                 </button>
                             </div>
-                            <div  class="col-lg-12 margensuperior busqueda_log_exitoso">
+                            <div  class="col-lg-12 margensuperior" v-show="busquedaslog">
                                 <table id="tablaResultadosLog" class="table table-bordered table-striped display"></table>
                             </div>
                         </div>
